syntax = "proto3";

service Auth {
  rpc login (LoginRequest) returns (TokenResponse);
  rpc register (RegisterRequest) returns (TokenResponse);
}

message LoginRequest {
  string login = 1;
  string password = 2;
}

message RegisterRequest {
  string name = 1;
  string login = 2;
  string password = 3;
}

message TokenResponse {
  string token = 1;
}
